// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityPostHeaderComponent should show community post header 1`] = `
<pf-community-post-header
  isExpiredPoll="false"
  isInternalOnly="false"
  isReply="false"
  isUserPoll="false"
  store={[Function Store]}
  time={[Function String]}
  user={[Function Object]}
>
  <div
    class="d-inline-block float-right ml-1"
    ngbdropdown=""
  >
    <button
      class="btn m-0 p-1"
      data-qa-id="ddm-communityPostActions"
      ngbdropdowntoggle=""
    >
      <span>
        ...
      </span>
    </button>
    <div
      ngbdropdownmenu=""
    >
      
      <button
        class="dropdown-item"
        data-qa-id="ddm-communityPostActionsEdit"
      >
        <fa-icon
          icon="pencil"
        />
         Edit
      </button>
      <button
        class="dropdown-item"
        data-qa-id="ddm-communityPostActionsDelete"
      >
        <fa-icon
          icon="trash-alt"
        />
         Delete
      </button>
      
    </div>
  </div><p
    class="m-0"
  >
    <span
      class="community-user-name-text"
    >
      Testfirstname Testlastname
    </span>
    <span
      class="community-sub-text"
    >
       @ Company Name | 3 days ago
    </span>
  </p>
</pf-community-post-header>
`;

exports[`CommunityPostHeaderComponent should show internal community post header 1`] = `
<pf-community-post-header
  isExpiredPoll="false"
  isInternalOnly={[Function Boolean]}
  isReply="false"
  isUserPoll="false"
  store={[Function Store]}
  time={[Function String]}
  user={[Function Object]}
>
  <div
    class="d-inline-block float-right ml-1"
    ngbdropdown=""
  >
    <button
      class="btn m-0 p-1"
      data-qa-id="ddm-communityPostActions"
      ngbdropdowntoggle=""
    >
      <span>
        ...
      </span>
    </button>
    <div
      ngbdropdownmenu=""
    >
      
      <button
        class="dropdown-item"
        data-qa-id="ddm-communityPostActionsEdit"
      >
        <fa-icon
          icon="pencil"
        />
         Edit
      </button>
      <button
        class="dropdown-item"
        data-qa-id="ddm-communityPostActionsDelete"
      >
        <fa-icon
          icon="trash-alt"
        />
         Delete
      </button>
      
    </div>
  </div><div
    class="internal float-right pl-2 pr-2 community-border-radius"
    data-qa-id="lbl-communityInternal"
  >
    Internal
  </div><p
    class="m-0"
  >
    <span
      class="community-user-name-text"
    >
      Testfirstname Testlastname
    </span>
    <span
      class="community-sub-text"
    >
       @ Company Name | 3 days ago
    </span>
  </p>
</pf-community-post-header>
`;

exports[`CommunityPostsHeaderComponent should show community post header 1`] = `
<pf-community-post-header
  isExpiredPoll="false"
  isInternalOnly="false"
  isReply="false"
  isUserPoll="false"
  store={[Function Store]}
  time={[Function String]}
  user={[Function Object]}
>
  <div
    class="d-inline-block float-right ml-1"
    ngbdropdown=""
  >
    <button
      class="btn m-0 p-1"
      data-qa-id="ddm-communityPostActions"
      ngbdropdowntoggle=""
    >
      <span>
        ...
      </span>
    </button>
    <div
      ngbdropdownmenu=""
    >
      
      <button
        class="dropdown-item"
        data-qa-id="ddm-communityPostActionsEdit"
      >
        <fa-icon
          icon="pencil"
        />
         Edit
      </button>
      <button
        class="dropdown-item"
        data-qa-id="ddm-communityPostActionsDelete"
      >
        <fa-icon
          icon="trash-alt"
        />
         Delete
      </button>
      
    </div>
  </div><p
    class="m-0"
  >
    <span
      class="community-user-name-text"
    >
      Testfirstname Testlastname
    </span>
    <span
      class="community-sub-text"
    >
       @ Company Name | 3 days ago
    </span>
  </p>
</pf-community-post-header>
`;

exports[`CommunityPostsHeaderComponent should show internal community post header 1`] = `
<pf-community-post-header
  isExpiredPoll="false"
  isInternalOnly={[Function Boolean]}
  isReply="false"
  isUserPoll="false"
  store={[Function Store]}
  time={[Function String]}
  user={[Function Object]}
>
  <div
    class="d-inline-block float-right ml-1"
    ngbdropdown=""
  >
    <button
      class="btn m-0 p-1"
      data-qa-id="ddm-communityPostActions"
      ngbdropdowntoggle=""
    >
      <span>
        ...
      </span>
    </button>
    <div
      ngbdropdownmenu=""
    >
      
      <button
        class="dropdown-item"
        data-qa-id="ddm-communityPostActionsEdit"
      >
        <fa-icon
          icon="pencil"
        />
         Edit
      </button>
      <button
        class="dropdown-item"
        data-qa-id="ddm-communityPostActionsDelete"
      >
        <fa-icon
          icon="trash-alt"
        />
         Delete
      </button>
      
    </div>
  </div><div
    class="internal float-right pl-2 pr-2 community-border-radius"
    data-qa-id="lbl-communityInternal"
  >
    Internal
  </div><p
    class="m-0"
  >
    <span
      class="community-user-name-text"
    >
      Testfirstname Testlastname
    </span>
    <span
      class="community-sub-text"
    >
       @ Company Name | 3 days ago
    </span>
  </p>
</pf-community-post-header>
`;
